# corvus-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  config.toml.example
admin/: index.html
src/: auth.rs  config.rs  error.rs  main.rs  models.rs  state.rs  storage.rs
src/routes/: auth.rs  dashboard.rs  extra_files.rs  instances.rs  manifest.rs  mod.rs  news.rs  public.rs  updates.rs
